# JDL-Live-Start-Detector

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  template_comparison_results.txt  test_both_templates.py
results/: JAPAN DRONE LEAGUE 2025 Round4 Qualify_MSoaNUMg2yo.csv  JAPAN DRONE LEAGUE 2025 Round4 Qualify_MSoaNUMg2yo_detailed.txt  JAPAN DRONE LEAGUE 2025 Round4 Qualify_MSoaNUMg2yo_links.md  JAPAN DRONE LEAGUE 2025 Round4 Semi Final & Final_Z7sjETGD-dg.csv  JAPAN DRONE LEAGUE 2025 Round4 Semi Final & Final_Z7sjETGD-dg_detailed.txt  JAPAN DRONE LEAGUE 2025 Round4 Semi Final & Final_Z7sjETGD-dg_links.md
scripts/: create_youtube_links.py  hybrid_configurable_detector.py  jdl_beep_detector.py  jdl_detector.py  pattern_enhanced_detector.py  short_template_beep_detector.py  test_all_with_test5.py  use_hybrid_detector.py  youtube_audio_downloader.py  youtube_jdl_processor.py
