[project]
name = "jdl-live-start-detector"
version = "1.0.0"
description = "Japan Drone League COUNT→GO pattern detection system for race start detection and YouTube synchronization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Saqoosha"},
    {name = "Claude Code", email = "noreply@anthropic.com"}
]
keywords = ["audio", "pattern-detection", "count-go", "race-start", "jdl", "youtube", "synchronization", "temporal-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "librosa>=0.11.0",
    "scipy>=1.16.0", 
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "pydub>=0.25.0",
    "scikit-learn>=1.7.0",
    "yt-dlp>=2024.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/Saqoosha/JDL-Live-Start-Detector"
Repository = "https://github.com/Saqoosha/JDL-Live-Start-Detector"
Documentation = "https://github.com/Saqoosha/JDL-Live-Start-Detector#readme"
Issues = "https://github.com/Saqoosha/JDL-Live-Start-Detector/issues"

[project.scripts]
jdl-detect = "scripts.jdl_detector:main"
jdl-pattern-detect = "scripts.pattern_enhanced_detector:detect_jdl_patterns_enhanced"
jdl-youtube = "scripts.youtube_jdl_processor:main"
jdl-download = "scripts.youtube_audio_downloader:main"
jdl-links = "scripts.create_youtube_links:create_youtube_links"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "templates", "tests"]